sorting files to work with index as the homepage rather than home

--- a/hobbies.html
+++ b/hobbies.html
@@ -81,11 +81,11 @@ li.right-icon {
 <body>
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="hobbies.html">Hobbies</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li class="right-icon">
-                <a href="#"><img src="../resources/img/JollyRoger.jpg" alt="Icon" width="50" height="50" class="nav-icon"></a>
+                <a href="#"><img src="resources/img/JollyRoger.jpg" alt="Icon" width="50" height="50" class="nav-icon"></a>
             </li>
         </ul>
     </nav>
@@ -95,19 +95,19 @@ li.right-icon {
         </div>
         <div class="card-container">
             <div class="card">
-                <img src="../resources/img/fivetendead.jpg" alt="Weightlifting">
+                <img src="resources/img/fivetendead.jpg" alt="Weightlifting">
                 <h3>Weightlifting</h3>
                 <p>I like improving my body and getting stronger and that hobby has also led me to being much healthier in all aspects of my life.</p>
             </div>
     
             <div class="card">
-                <img src="../resources/img/overwatch.jpg" alt="Videogames">
+                <img src="resources/img/overwatch.jpg" alt="Videogames">
                 <h3>Videogames</h3>
                 <p>I love playing videogames with my friends. I also love the competitive aspect, and when I was younger I even tried to go pro.</p>
             </div>
     
             <div class="card">
-                <img src="../resources/img/programming1000x500.jpg" alt="Programming">
+                <img src="resources/img/programming1000x500.jpg" alt="Programming">
                 <h3>Programming</h3>
                 <p>I'm drawn to Computer Science because I've always loved logic and problem solving.</p>
             </div>
