--- a/projects.html
+++ b/projects.html
@@ -53,11 +53,11 @@ li.right-icon {
 <body>
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="hobbies.html">Hobbies</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li class="right-icon">
-                <a href="#"><img src="../resources/img/JollyRoger.jpg" alt="Icon" width="50" height="50" class="nav-icon"></a>
+                <a href="#"><img src="resources/img/JollyRoger.jpg" alt="Icon" width="50" height="50" class="nav-icon"></a>
             </li>
         </ul>
     </nav>
@@ -66,20 +66,20 @@ li.right-icon {
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../resources/img/programming1000x500.jpg" class="d-block w-100" alt="...">
+                        <img src="resources/img/programming1000x500.jpg" class="d-block w-100" alt="...">
                         <p>I made this personal website using HTML, CSS, and Bootstrap. I'm going to
                             continue working on this website to make it better and learn more about web development.
                         </p>
                     </div>
                     <div class="carousel-item">
-                        <img src="../resources/img/scythe.jpg" class="d-block w-100" alt="Scythe">
+                        <img src="resources/img/scythe.jpg" class="d-block w-100" alt="Scythe">
                         <p>I'm currently working on a project remaking the board game Scythe in C++! I played this game with my friends a lot 
                             over winter break and I thought this would be a good opportunity to sharpen my C++ skills and interact with 
                             a more advanced graphics library then text in a terminal.
                         </p>
                     </div>
                     <div class="carousel-item">
-                        <img src="../resources/img/candyland.jpg" class="d-block w-100" alt="...">
+                        <img src="resources/img/candyland.jpg" class="d-block w-100" alt="...">
                         <p>In freshman year I built the game Candyland in C++.</p>
                     </div>
                 </div>
