--- a/resume.html
+++ b/resume.html
@@ -70,11 +70,11 @@ h1, h2 {
 <body>
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="hobbies.html">Hobbies</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li class="right-icon">
-                <a href="#"><img src="../resources/img/JollyRoger.jpg" alt="Icon" width="50" height="50" class="nav-icon"></a>
+                <a href="#"><img src="resources/img/JollyRoger.jpg" alt="Icon" width="50" height="50" class="nav-icon"></a>
             </li>
         </ul>
     </nav>
@@ -129,7 +129,7 @@ h1, h2 {
 
     </main>
     <footer>
-        <a href="../resources/CSResume.pdf" target="_blank" download="filename.pdf">
+        <a href="resources/CSResume.pdf" target="_blank" download="filename.pdf">
             <button>Download Resume PDF</button>
         </a>
         <p>Connect with me:</p>
